<resources>
    <string name="app_name">BarselsApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_videoguides">Videoguides</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_loginakt">Loginakt</string>
    <string-array name="fagtitels">
        <item>Hvorfor er det godt at amme?</item>
        <item>Hvordan ved vi, om vores barn får nok at spise?</item>
        <item>Hvordan ved vi, om barnet har rigtig fat på brystet?</item>
        <item>Hvorfor er barnet nogle gange uroligt kort efter amningen?</item>
        <item>​​Hvordan ved vi, at mælken er løbet til?</item>
        <item>​Hvordan undgås sår og revner på brystvorterne?</item>
        <item>Hvad er brystbetændelse?</item>
        <item>Hvordan forebygger jeg brystbetændelse?</item>
        <item>Hvornår er det en god idé at bruge suttebrik?</item>
        <item>Hvornår kan det være nødvendigt at malke ud?</item>
        <item>Hvornår er det en god idé at give barnet sut</item>
        <item>​​Hvor kan vi få hjælp til amning, når vi er kommet hjem?</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="javabog">http://javabog.dk</string>
    <string name="ernæring">Det er perfekt ernæring til jeres barn.\n</string>
    <string name="ernæring1">Der er tæt kontakt mellem mor og barn.\n</string>
    <string name="ernæring4">Det optimerer barnets fysiske og mentale udvikling.</string>
    <string name="amning">Barn skal virke veltilpas mellem amningerne.\n</string>
    <string name="ernæring3">Amning har en forebyggende virkning i forhold til fx infektionssygdomme, mave-tarmsygdomme og mellemørebetændelse.\n</string>
    <string name="ernæring2">Det er praktisk og nemt.\n</string>
    <string name="amning1">Afføringen skal være blød og gullig (børn skal have afføring hver dag den første måned, de kan godt have det flere gange om dagen).\n</string>
    <string name="amning2">Bleerne skal være våde.\n</string>
    <string name="amning3">Barnet skal være interesseret i kontakt, når det er vågent.\n</string>
    <string name="amning4">Barnet bør få mindst seks måltider i døgnet.\n</string>
    <string name="amning5">Nogle børn kan spise sig mætte i løbet af 20 min. mens andre har brug for længere tid.\n</string>
    <string name="amning6">I timerne efter barnet har suttet første gang, kan det godt være træt og sove mange timer. Vil barnet i dagene efter fødslen igen sove i lang tid, bør barnet vækkes efter ca. 3-4 timer og tilbyde mad.\n</string>
    <string name="amning7">Får barnet ikke det det har brug for kan det skyldes at barnet bliver lagt til for sjælden eller ikke sutter tilstrækkelig længe ved det enkelte bryst, til at få den fede mælk. Desuden er det vigtigt at barnet har rigtigt fat om brystet. \n</string>
    <string name="amning8">​Gode råd til mor:\n</string>
    <string name="amning9">Vær forberedt på at amme mange gange dagligt.\n</string>
    <string name="amning10">Lad være med at give barnet sut før amningen er etableret.\n</string>
    <string name="amning11">Hvil dig så meget som muligt.\n</string>
    <string name="amning12">Husk at spise og drikke.\n</string>
    <string name="amning13">Tilbyd brystet så ofte som muligt og lad barnet sutte længe.</string>
    <string name="parat">Barnet er parat til at tage brystet med munden på vid gab. Når barnet har fået godt fat, er underlæben krænget godt ud og ligger et godt stykke inde på brystet. Undertiden kan tungen ses i mundvigen. Det kan gøre ondt i starten af amningen, men efter nogle minutter skal amningen ikke være forbundet med stærke smerter.</string>
    <string name="efterfød_1">Hvis du er førstegangsfødende, tilbyder vi dig at blive indlagt på en af vores forældrestuer på barselgangen sammen med din partner.\n
       I kan også blive indlagt på barselgangen, hvis du er fler-gangsfødende og har haft en kompliceret graviditet eller fødsel.\n
        \nDet kan for eksempel være, hvis:\n
        • Du har født ved akut eller planlagt kejsersnit \n
        • Du har født for tidligt (før 37 graviditetsuger) \n
        • Du eller jeres nyfødte barn kræver ekstra observation\n
        • Du tidligere har haft amme problemer eller er bryst- opereret\n
        • Du har født tvillinger • du har haft graviditetssukkersyge eller svangerskabsfor-giftning\n
        • Der opstår komplikationer under fødslen, fx hvis du bløder mere end normalt\n\n
        Ved andre komplikationer tager vi individuelt stilling til, om du kan føde ambulant, eller om du skal tilbydes barselsophold.\n
        Som udgangspunkt varer et barselsophold to døgn. Hvis der er behov for yderligere indlæggelse, planlægger vi det videre forløb sammen med jer.</string>
    <string name="ambulant0">Hvis du har født før, og du har haft en ukompliceret graviditet og fødsel, kan du forvente at føde ambulant.\n\nAt føde ambulant vil sige, at I kan blive på fødestuen 4-6 timer efter fødslen, hvorefter I tager hjem. Inden udskrivelsen vil en jordemoder give jer al relevant information, så I føler jer trygge.\n\nDet forventes som udgangspunkt, at I selv sørger for hjem-transport efter fødslen.\n\nHvis du føder ambulant, følger vi op på fødslen og barnets trivsel, efter at I er kommet hjem. Det betyder, at I:\n\n• vil blive ringet op af en jordemoder dagen efter fødslen, der sikrer sig, at både mor og barn har det godt.\n• bliver tilbudt besøg af en jordemoder på 2. eller 3. da-gen efter fødslen.\n• kan kontakte vores Hotline, hvis I har spørgsmål eller bekymringer.</string>
    <string name="ambulant1">Hjemmebesøg på 2. eller 3.dagen.</string>
    <string name="ambulant2">Inden I tager hjem fra fødegangen, aftaler vi en dag, hvor en jordemoder vil besøge jer derhjemme.\nJordemoderen vil ved besøget sikre sig, at mor og barn har det godt. Hun vil i samarbejde med jer drøfte jeres barns trivsel, og hvad I særligt skal være opmærksomme på.\nHun vil lave en opfølgning på din fysiske tilstand efter fødslen og på om amningen er etableret.\nHun gennemgår fødslen med jer, og I har mulighed for at stille spørgsmål.I forbindelse med besøget tages også hælblodprøve (PKU) på barnet</string>
    <string name="amning0">At få en amning i gang kræver tid, tålmodighed, vilje og ikke mindst opbakning fra de nærmeste pårørende. Det er vigtigt allerede i graviditeten at afstemme forventningerne med hinanden, så det bliver et fælles projekt. Derfor taler vi med jer om amning allerede hos jordemoderen i uge 29 og til Barn i vente, modul 2.</string>
    <string name="amning_1">Hvis det er muligt, bør jeres barn allerede på fødestuen have mulighed for at die første gang. Et nyfødt barn skal helst ligge på mors bryst de første timer. Denne hud til hud kontakt er også vigtig for at få amningen i gang. Når det nyfødte barn er klar til at die, vil det begynde at slikke sig om munden og dreje hovedet til siden og søge efter brystet. Det kan være svært at få rigtigt fat – det skal læres, så vær tålmodig. Bare det, at barnet søger og slikker på brystet, vil sætte gang i mælkeproduktionen. Brug tiden på fødestuen til at begynde at lære signalerne fra barnet at kende. Vi anbefaler ro på stuen – derfor vejer og måler vi også først barnet senere.</string>
    <string name="amning_2">Det er meget forskelligt, hvor ofte et barn vil spise. Nogle børn melder sig med jævne mellemrum, andre har et par timer, hvor de ønsker at die hele tiden for så at tage en længere pause. Antallet af amninger i døgnet er også meget forskelligt fra barn til barn. Nogle sutter 8 - 10 gange i døgnet, andre sutter 16-18 gange. Nogle børn sutter i kort tid, andre i lang tid. Fri adgang til brystet betyder, at det er barnet, der bestemmer hyppighed og varighed - og det er det, vi anbefaler. Går du hjem ambulant, skal du også her huske fri adgang til brystet. Du skal huske, at du skal hjem og være barslende. Du skal hjem og passe på dig selv og ligge hud mod hud med dit barn, da vi ved, at jo oftere du lægger barnet til, jo mere mælk vil du kunne producere senere i ammeforløbet. Så læg til, når barnet melder sig, og giv dig tid til at amme, så længe barnet ønsker det.</string>
    <string name="amning_3">I de første døgn efter fødslen vil du have råmælk til barnet. Råmælken dækker normalt barnets behov, hvis barnet har fri adgang til brystet. Modermælken løber sædvanligvis til 3.-4. dagen efter fødslen. Hos nogle dog senere. I den forbindelse vil der ofte opstå brystspænding.\n\nHvis du får brystspænding, kan dette lindres ved:\n\n• varme (varme brusebade, varme omslag, uldent tøj)\n• hyppig amning\n• støttende BH uden bøjle\n\nHvis brystet er så spændt, at barnet ikke kan få fat i bryst-vorten, kan du malke lidt ud med hånden eller bruge en håndpumpe (se vejledning senere).\n\nRåmælken, som barnet får de første dage, ændrer ikke sammensætning i løbet af et måltid. Når mælken er løbet til, vil den første mælk være mindre fedtholdig, for senere i måltidet at blive mere fedtholdig og mere mættende.</string>
    <string name="amning_4">Der findes mange forskellige ammestillinger. Sørg for, at du finder nogle stillinger, der er behagelige for dig. Hjælp dit barn til rette, så det ligger godt. Undgå, at barnet skal dreje hovedet for at få ordentligt fat om brystet. Det vigtigste er, at barnet kan få godt fat på brystet, at du kan slappe af og holde barnet tæt ind til dig, uanset hvor længe amningen varer.\nVariér dine ammestillinger. Det kan være en god idé at finde en siddende stilling, hvor du ikke er afhængig af en bestemt stol og en bestemt pude, så du kan amme alle steder. Du kan også ligge ned og amme.\nNår barnet har rigtigt fat, bør det ikke gøre ondt at amme. Dog kan brystvorten være øm, lige når barnet tager fat. Du kan massere dit bryst blidt og trykke lidt mælk ud, inden barnet bliver lagt til. Dette mindsker ømheden, da du på den måde sætter gang i nedløbsrefleksen. Er du det mindste i tvivl, kan du søge hjælp eller vejledning hos personalet, og efter udskrivelsen på vores Hotline på barselgangen eller hos sundhedsplejersken.\n\nBarnet tager rigtigt fat, når:\n· suttebevægelsen kan ses på kæbemuskulaturen\n· underlæben er krænget ned og omslutter en stor del af det brune område af brystvorten.</string>
    <string name="amning_5">Rigtig ammeteknik. Underlæben er krænget ud og næsen er fri.</string>
    <string name="amning_7">Rigtig sutteteknik. Brystvorten ligger langt tilbage i munden, tungen er fremme og smyger sig om vortens underside.</string>
    <string name="amning_8">Lad barnet styre amningen:\n• Læg dit barn til brystet, når det virker vågent og in-teresseret. Det vil sige, at barnet laver suttebevægelser, putter fingre/ hænder i munden, eller bevæger hovedet fra side til side med åben søgende mund.\n• Tilbyd begge bryster hver gang indtil mælken løber til. Skift side, når barnet slipper.\n• Lad barnet sutte, så tit det vil – dog minimum seks gange i døgnet. Det nyfødte barn kan godt være træt, eller forkvalmet og derfor ikke have lyst til at die. Du kan presse lidt råmælk frem, som dit barn kan få. Det er vigtigt, at barnet tilbydes brystet så snart det er parat til at sutte.\n• Når modermælken er løbet til, normalt på 3.-4. dagen, ændres måltidet. Den fedtholdige, mættende mælk kommer til sidst. Lad barnet “tømme” et bryst ad gangen. Læg skiftevis til på højre og venstre side.</string>
    <string name="spørgsmål">Hvis du har spørgsmål så er du velkommen til at chatte med os</string>
</resources>