<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.louise.barelsappfrac.info.Ambulantfoedsel">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ambulant fødsel"
            android:textSize="30dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="#ff2b1655"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ambulantehead"
            android:scaleType="centerInside"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ambulant0"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="15dp"
            android:textColor="#ff2b1655"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ambulant1"
            android:textSize="20dp"
            android:textColor="#ff2b1655"
            android:textStyle="bold"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/efterfød_1"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="15dp"
            android:textColor="#ff2b1655"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ambulant fødsel"
            android:textSize="20dp"
            android:textColor="#ff2b1655"
            android:textStyle="bold"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ambulant2"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="15dp"
            android:textColor="#ff2b1655"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spørgsmål"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="#ff2b1655"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:layout_marginRight="5dp"
                android:src="@drawable/chat_info"
                android:layout_gravity="right"
                android:id="@+id/nychat"/>
            </LinearLayout>


    </LinearLayout>
</ScrollView>

</FrameLayout>
